fundamentals of html files

--- a/HTML101/HTML-Boilerplate.html
+++ b/HTML101/HTML-Boilerplate.html
@@ -2,14 +2,41 @@
 
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
+    
     <head>
-        <title>This is a title</title>
+
+        <!-- This is the meta data for the html file-->
+        <meta charset="utf-8">
+        <meta name="description" content="This is my website">
+
+        <!-- CSS file link for styling -->
+        <link rel="stylesheet" href="./path/path.myfile.css">
+
+        <!-- Other needed links like Icons -->
+
+        <link rel="icon" href="./some/icon/path.myfile.png">
+
+        <!-- The title for the tab-->
+
+        <title> HTML Basics </title>
+
     </head>
 
     <body>
+
+        <!-- This is the header of the page -->
+
         <h1>This is a header</h1>
+
+        <!-- This is my paragrah -->
         <p> This is a paragrah </p>
+
+
+        <!-- Lastly we add any javascript files we may have -->
+        <script type="text/javascript" src="./some/path/main.js">
+
+        </script>
     </body>
 
 </html>
