Added image, css, and js folders; added my-fav exrcise file

--- a/HTML101/buttons-images.html
+++ b/HTML101/buttons-images.html
@@ -24,7 +24,7 @@
         <!-- This is one way to attach your images -->
         <img src="https://i.etsystatic.com/20649982/r/il/97fb65/2270932519/il_1588xN.2270932519_pxmn.jpg" alt=" This is a car image"> 
 
-
+        <img src="" alt="">
 
 
     </body>
